# ccdexplorer

./: .dockerignore  .env.sample  .gitignore  README.md  cov.xml  coverage.xml  justfile  mkdocs.yml  pyproject.toml  s7.py  trader_create_and_sell_all_contracts_erc155_v1.csv  trader_create_and_sell_all_contracts_erc721_v2.csv  workspace.toml
.github/: filters.generated.yml
.github/workflows/: build-projects.yml  docs.yml  manual-run-all.yml
bases/ccdexplorer/accounts_retrieval/: __main__.py  core.py
bases/ccdexplorer/bot/: __main__.py  notification_classes.py
bases/ccdexplorer/ccdexplorer_bot/: __main__.py
bases/ccdexplorer/ccdexplorer_mcp/: __init__.py  core.py  main.py
bases/ccdexplorer/dagster_nightrunner/: repository.py
bases/ccdexplorer/dagster_paydays/: __init__.py  materialize_external_asset.py  repository.py
bases/ccdexplorer/dagster_recurring/: repository.py
bases/ccdexplorer/heartbeat/: core.py
bases/ccdexplorer/ms_accounts/: core.py
bases/ccdexplorer/ms_block_analyser/: __main__.py  core.py
bases/ccdexplorer/ms_bot_sender/: __main__.py  core.py
bases/ccdexplorer/ms_events_and_impacts/: core.py
bases/ccdexplorer/ms_indexers/: core.py
bases/ccdexplorer/ms_instances/: core.py
bases/ccdexplorer/ms_metadata/: core.py
bases/ccdexplorer/ms_modules/: core.py
bases/ccdexplorer/ms_plt/: core.py  update_plts_from_txs.py
bases/ccdexplorer/ms_token_accounting/: core.py
components/ccdexplorer/ccdscan/: __init__.py  core.py
components/ccdexplorer/celery_app/: __init__.py  core.py
components/ccdexplorer/cis/: __init__.py  core.py
components/ccdexplorer/cns/: __init__.py  core.py
components/ccdexplorer/concordium_client/: __init__.py  core.py
components/ccdexplorer/domain/: __init__.py  cis.py  credential.py  generic.py  mongo.py  s7.py
components/ccdexplorer/env/: __init__.py  settings.py
components/ccdexplorer/grpc_client/: __init__.py  _generated_imports.py  core.py  health_pb2.py  health_pb2.pyi  health_pb2_grpc.py  kernel_pb2.py  kernel_pb2_grpc.py  protocol-level-tokens.proto  protocol_level_tokens_pb2.py  protocol_level_tokens_pb2.pyi  protocol_level_tokens_pb2_grpc.py  service.proto  service_pb2.py  service_pb2_grpc.py  types.proto  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py  wadze.py
components/ccdexplorer/mongodb/: __init__.py  core.py
components/ccdexplorer/schema_parser/: __init__.py
components/ccdexplorer/site_user/: __init__.py  site_user.py
components/ccdexplorer/tooter/: __init__.py  core.py
components/ccdexplorer/wasm_decoder/: __init__.py  wadze.py
development/: doit.py  fill_stable_address_info.py  realized_prices.py  redit_failures.py  s7.py  s7_get_links.py  s7_get_links_no_marimo.py  schw.py
development/__marimo__/session/: doit.py.json
development/grpc_gen/: health_pb2.pyi  health_pb2_grpc.py  kernel_pb2.py  protocol_level_tokens_pb2.py  protocol_level_tokens_pb2.pyi  protocol_level_tokens_pb2_grpc.py  service_pb2.py  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi
docs/: CNAME  index.md
docs/bases/: dagster_paydays.md
docs/components/: ccdscan.md  celery.md  cis.md  cns.md  concordium-client.md  domain.md  env.md  grpc.md  mongodb.md  site-user.md  tooter.md  wasmdecoder.md
docs/entities/: account.md  alias.md  block.md  community_labels.md  contract.md  index.md  module.md  token.md  transaction.md
docs/projects/: accounts_retrieval.md  api.md  bot.md  bot_sender.md  dagster_nightrunner.md  dagster_paydays.md  dagster_recurring.md  index.md  projects.md  site.md
docs/projects/every_block/: block_analyzer.md  events_and_impacted.md  heartbeat.md  indexers.md  metadata.md  new_address.md  new_contract.md  new_module.md  plt.md  token_accounting.md
docs/projects/timed_services/: account_graph.md  accounts.md  statistics_daily_holders.md  statistics_fees.md  statistics_realized_prices.md  statistics_unique_addresses.md  transactions_by_projects.md  transactions_by_type_contents.md
docs/reference/: schema-parser.md
docs/services/: index.md  projects.md
docs/services/end_of_day/: account_graph.md  transactions_by_projects.md  transactions_by_type_contents.md
docs/services/every_block/: events_impacted_addresses.md  heartbeat.md  token_accounting.md
docs/services/messages/: new_address.md  new_module.md
projects/accounts_retrieval/: Dockerfile  pyproject.toml
projects/api/: Dockerfile  asgi.py  pyproject.toml
projects/bot/: Dockerfile  pyproject.toml
projects/ccdexplorer_api/: Dockerfile  asgi.py  entrypoint.sh  pyproject.toml
projects/ccdexplorer_api/templates/account/: purchase_tokens_invalid.html  purchase_tokens_valid.html  send_tokens.html  tokens_sent.html
projects/ccdexplorer_api/templates/base/: base.html
projects/ccdexplorer_bot/: Dockerfile  pyproject.toml
projects/ccdexplorer_mcp/: Dockerfile  README.md  asgi.py  pyproject.toml
projects/ccdexplorer_site/: Dockerfile  README.md  asgi.py  pyproject.toml
projects/dagster_nightrunner/: Dockerfile  pyproject.toml
projects/dagster_paydays/: Dockerfile  main_local.py  pyproject.toml
projects/dagster_recurring/: Dockerfile  pyproject.toml
projects/heartbeat/: Dockerfile  main_local.py  pyproject.toml
projects/ms_accounts/: Dockerfile  main_local.py  pyproject.toml
projects/ms_block_analyser/: Dockerfile  pyproject.toml
projects/ms_bot_sender/: Dockerfile  pyproject.toml
projects/ms_events_and_impacts/: Dockerfile  main_local.py  pyproject.toml  schema.py
projects/ms_indexers/: Dockerfile  main_local.py  pyproject.toml
projects/ms_instances/: Dockerfile  main_local.py  pyproject.toml
projects/ms_metadata/: Dockerfile  main_local.py  pyproject.toml
projects/ms_modules/: Dockerfile  entrypoint.sh  main_local.py  pyproject.toml
projects/ms_modules/concordium_tools/: Dockerfile  pyproject.toml
projects/ms_plt/: Dockerfile  main_local.py  pyproject.toml
projects/ms_token_accounting/: Dockerfile  main_local.py  pyproject.toml
projects/site/: Dockerfile  asgi.py  pyproject.toml
projects/site/static/: jinja2_helpers.py
scripts/: generate_path_filters.py
test/: conftest.py
(+491 files in other folders)
