[build-system]
requires      = [ "hatchling", "hatch-polylith-bricks" ]
build-backend = "hatchling.build"

[project]
name    = "accounts_retrieval"
version = "0.1.0"


requires-python = ">=3.12"

dependencies = [
    "python-dotenv",
    "python-dateutil",
    "base58",
    "eth-hash",
    "pycryptodome",
    "pytest",
    "grpcio",
    "grpcio-tools",
    "betterproto[compiler]==2.0.0b6",
    "leb128",
    "pydantic",
    "pymongo",
    "requests",
    "apprise",
    "py-graphql-client",
    "chardet",
    "pandas>=2.3.3",
    "pre-commit",
    "cbor2",
    "aiohttp",
    "redis",
    "rich",
    "celery[redis,mongodb]",
    "protobuf",
    "googleapis-common-protos",
    "httpx",

    "gitpython>=3.1.45",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ccdexplorer/accounts_retrieval" = "ccdexplorer/accounts_retrieval"
"../../components/ccdexplorer/env"           = "ccdexplorer/env"
"../../components/ccdexplorer/domain"        = "ccdexplorer/domain"
"../../components/ccdexplorer/tooter"        = "ccdexplorer/tooter"
"../../components/ccdexplorer/mongodb"       = "ccdexplorer/mongodb"
"../../components/ccdexplorer/grpc_client"   = "ccdexplorer/grpc_client"
