[build-system]
requires      = [ "hatchling", "hatch-polylith-bricks" ]
build-backend = "hatchling.build"

[project]
name    = "bot"
version = "0.1.0"


requires-python = ">=3.12"

dependencies = [
    "python-dotenv",
    "python-dateutil",
    "base58",
    "eth-hash",
    "pycryptodome",
    "pytest",
    "grpcio",
    "grpcio-tools",
    "betterproto[compiler]==2.0.0b6",
    "leb128",
    "pydantic",
    "pymongo",
    "requests",
    "apprise",
    "py-graphql-client",
    "chardet",
    "pre-commit",
    "cbor2",
    "aiohttp",
    "redis",
    "rich",
    "celery[redis,mongodb]",
    "protobuf",
    "googleapis-common-protos",
    # "httpx",
    "scheduler>=0.8.8",
    "python-telegram-bot[job-queue]>=22.5",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ccdexplorer/bot"              = "ccdexplorer/bot"
"../../components/ccdexplorer/mongodb"     = "ccdexplorer/mongodb"
"../../components/ccdexplorer/tooter"      = "ccdexplorer/tooter"
"../../components/ccdexplorer/grpc_client" = "ccdexplorer/grpc_client"
"../../components/ccdexplorer/domain"      = "ccdexplorer/domain"
"../../components/ccdexplorer/env"         = "ccdexplorer/env"
"../../components/ccdexplorer/site_user"   = "ccdexplorer/site_user"
