[build-system]
requires      = [ "hatchling", "hatch-polylith-bricks" ]
build-backend = "hatchling.build"

[project]
name    = "dagster_paydays"
version = "0.1.0"


requires-python = ">=3.12"

dependencies = [
    "python-dotenv",
    "python-dateutil",
    "base58",
    "eth-hash",
    "pycryptodome",
    "pytest",
    "grpcio",
    "grpcio-tools",
    "betterproto[compiler]==2.0.0b6",
    "leb128",
    "pydantic",
    "pymongo",
    "requests",
    "apprise",
    "py-graphql-client",
    "chardet",
    "pre-commit",
    "cbor2",
    "aiohttp",
    "redis",
    "rich",
    "celery[redis,mongodb]",
    "protobuf",
    "googleapis-common-protos",
    # "httpx",
    "scheduler>=0.8.8",
    "dagster>=1.11.14",
    "dagster-postgres>=0.27.14",
    "dagster-docker>=0.27.14",
    "prometheus-client",
    "sentry-sdk[fastapi]>=2.41.0",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ccdexplorer/dagster_paydays"  = "ccdexplorer/dagster_paydays"
"../../components/ccdexplorer/tooter"      = "ccdexplorer/tooter"
"../../components/ccdexplorer/env"         = "ccdexplorer/env"
"../../components/ccdexplorer/cis"         = "ccdexplorer/cis"
"../../components/ccdexplorer/domain"      = "ccdexplorer/domain"
"../../components/ccdexplorer/grpc_client" = "ccdexplorer/grpc_client"
"../../components/ccdexplorer/mongodb"     = "ccdexplorer/mongodb"
