[build-system]
requires      = [ "hatchling", "hatch-polylith-bricks" ]
build-backend = "hatchling.build"

[project]
name    = "dagster_recurring"
version = "0.1.0"


requires-python = ">=3.12"

dependencies = [
    "python-dotenv",
    "python-dateutil",
    "base58",
    "eth-hash",
    "pycryptodome",
    "pytest",
    "grpcio",
    "grpcio-tools",
    "betterproto[compiler]==2.0.0b6",
    "leb128",
    "pydantic",
    "pymongo",
    "requests",
    "apprise",
    "py-graphql-client",
    "chardet",
    "pre-commit",
    "cbor2",
    "aiohttp",
    "redis",
    "rich",
    "celery[redis,mongodb]",
    "protobuf",
    "googleapis-common-protos",
    "httpx",
    "scheduler>=0.8.8",
    "dagster>=1.11.14",
    "dagster-postgres>=0.27.14",
    "dagster-docker>=0.27.14",
    "dagster-celery>=0.28.7",
    "prometheus-client",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ccdexplorer/dagster_recurring" = "ccdexplorer/dagster_recurring"
"../../components/ccdexplorer/celery_app"   = "ccdexplorer/celery_app"
"../../components/ccdexplorer/mongodb"      = "ccdexplorer/mongodb"
"../../components/ccdexplorer/domain"       = "ccdexplorer/domain"
"../../components/ccdexplorer/cis"          = "ccdexplorer/cis"
"../../components/ccdexplorer/env"          = "ccdexplorer/env"
"../../components/ccdexplorer/tooter"       = "ccdexplorer/tooter"
"../../components/ccdexplorer/grpc_client"  = "ccdexplorer/grpc_client"
