[build-system]
requires      = [ "hatchling", "hatch-polylith-bricks" ]
build-backend = "hatchling.build"

[project]
name    = "ms_block_analyser"
version = "0.1.0"


requires-python = ">=3.12"

dependencies = [
  "python-dotenv",
  "python-dateutil",
  "base58",
  "eth-hash",
  "pycryptodome",
  "pytest",
  "grpcio",
  "grpcio-tools",
  "betterproto[compiler]==2.0.0b6",
  "leb128",
  "pydantic",
  "pymongo",
  "requests",
  "apprise",
  "py-graphql-client",
  "sentry-sdk[fastapi]>=2.41.0",
  "chardet",
  "pre-commit",
  "cbor2",
  "aiohttp",
  "redis",
  "rich",
  "celery[redis,mongodb]",
  "protobuf",
  "googleapis-common-protos",
  "prometheus-client",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ccdexplorer/ms_block_analyser" = "ccdexplorer/ms_block_analyser"
"../../components/ccdexplorer/env"          = "ccdexplorer/env"
"../../components/ccdexplorer/domain"       = "ccdexplorer/domain"
"../../components/ccdexplorer/cis"          = "ccdexplorer/cis"
"../../components/ccdexplorer/celery_app"   = "ccdexplorer/celery_app"
"../../components/ccdexplorer/tooter"       = "ccdexplorer/tooter"
"../../components/ccdexplorer/grpc_client"  = "ccdexplorer/grpc_client"
"../../components/ccdexplorer/mongodb"      = "ccdexplorer/mongodb"
