[build-system]
requires      = [ "hatchling", "hatch-polylith-bricks" ]
build-backend = "hatchling.build"

[project]
name        = "concordium_tools"
description = "Prebuilt Concordium toolchain base image"
version     = "0.1.0"


requires-python = ">=3.12"

dependencies = [  ]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
